# HIPE-2026-llm-baseline

./: .gitignore  Makefile  README.md  RELEASE.md  RELEASE_PROCESS.md  pyproject.toml  requirements.txt
configs/: model.example.json
data/: README.md
data/test/: HIPE-2026-v1.0-impresso-test-de.jsonl  HIPE-2026-v1.0-impresso-test-en.jsonl  HIPE-2026-v1.0-impresso-test-fr.jsonl  HIPE-2026-v1.0-surprise-test-fr.jsonl
models/: README.md
outputs/: README.md
prompts/: classify_pair.txt
results-test.d/: debug.HIPE-2026-v1.0-impresso-test-de.jsonl  debug.HIPE-2026-v1.0-impresso-test-en.jsonl  debug.HIPE-2026-v1.0-impresso-test-fr.jsonl  debug.HIPE-2026-v1.0-surprise-test-fr.jsonl  predictions.HIPE-2026-v1.0-impresso-test-de.jsonl  predictions.HIPE-2026-v1.0-impresso-test-en.jsonl  predictions.HIPE-2026-v1.0-impresso-test-fr.jsonl  predictions.HIPE-2026-v1.0-surprise-test-fr.jsonl
results.d/: debug.en.jsonl  debug.fr.jsonl  predictions.de.diagnostic.json  predictions.de.jsonl  predictions.en.diagnostic.json  predictions.en.jsonl  predictions.fr.diagnostic.json  predictions.fr.jsonl
scripts/: compare_predictions.py  evaluate_predictions.py  run_baseline.py
src/hipe2026_mistral_baseline/: __init__.py  compare_predictions.py  export.py  inference.py  io_hipe.py  pair_generation.py  parsing.py  prompting.py  run_baseline.py  scoring.py  (+1 more)
tests/: test_compare_predictions.py  test_config.py  test_export.py  test_inference.py  test_io.py  test_pairs.py  test_parsing.py  test_prompting.py  test_run_baseline.py  test_runtime_backend.py  test_scoring.py  test_smoke.py
(+1 files in other folders)
